syntax = "proto3";

package xbasissvc.external.analysis;

import "konekko.me/xbasis/commons/dto/commons.proto";

service Analysis {

    rpc SearchTracking (SearchTrackingRequest) returns (SearchTrackingResponse);

    rpc GetTrackingStageDetail (GetTrackingDetailRequest) returns (TrackingStageResponse);

    rpc GetFunctionDetail (GetFunctionDetailRequest) returns (GetFunctionDetailResponse);

    rpc SearchFunctions (SearchFunctionRequest) returns (SearchFunctionResponse);

}

message SearchFunctionRequest {
    bool rank = 1;
    int64 page = 2;
    int64 size = 3;
    string keyword = 4;
    string appId = 5;
}

message SearchFunctionResponse {
    xbasis.commons.dto.State state = 1;
    repeated StateFunction data = 2;
}

message StateFunction {
    string functionId = 1;
    int64 total = 2;
    int64 todayTotal = 3;
    int64 lastDayTotal = 4;
    int64 error = 5;
    int64 todayError = 6;
    int64 lastDayError = 7;
    int64 avgTiming = 8;
    int64 minTiming = 9;
    int64 maxTiming = 10;
    int64 timing = 11;
    int64 lastDayUserVisit = 12;
    int64 todayUserVisit = 13;
    string functionName = 14;
    string path = 15;
    string appId = 16;
    int64 mnovps = 17; //最大每秒访问次数
    int64 mnovpm = 18; //最大每分钟访问次数
    int64 mnovph = 19; //最大每小时访问次数
    int64 avgDayTotal = 20;
}

message GetFunctionDetailRequest {
    string functionId = 1;
}

message GetFunctionDetailResponse {
    xbasis.commons.dto.State state = 1;
}

message SearchTrackingRequest {
    //def is PermissionVerification
    string key = 1;
    string value = 2;
    string appId = 3;
    int64 page = 4;
    int64 size = 5;
}

message SearchTrackingResponse {
    xbasis.commons.dto.State state = 1;
    repeated RequestTracking data = 2;
}

message RequestTracking {
    string trackId = 1;
    string userAgent = 2;
    string path = 3;
    string ip = 4;
    string routeTo = 5;
    string function = 6;
    int64 timestamp = 7;
    string userId = 8;
    bool hasAccessToken = 9;
    bool hasDurationToken = 10;
    bool passed = 11;
    StageTaking taking = 12;
    bool basicValidation = 13;
    bool invalidApi = 14;
    bool deniedApiClient = 15;
}

message GetTrackingDetailRequest {
    string traceId = 1;
}

message TrackingStageResponse {
    xbasis.commons.dto.State state = 1;
    repeated TrackingStageItem data = 2;
    string functionId = 3;
    string appId = 4;
    StageTaking taking = 5;
    string functionName = 6;
    int64 timestamp = 7;
    string userId = 8;
    string clientId = 9;
    string refClientId = 10;
    repeated string authTypes = 11;
    string userAgent = 12;
    string userDevice = 13;
    string ip = 14;
    string message = 15;
    bool hasAccessToken = 16;
    bool hasDurationToken = 17;
    bool passed = 18;
    bool basicValidation = 19;
    bool invalidApi = 20;
    bool deniedApiClient = 21;
    string path = 22;
    string platform = 23;
}

message TrackingStageItem {
    string serviceName = 1;
    int64 timing = 2;
    string message = 3;
    int64 stateCode = 4;
    string moduleName = 5;
    string level = 6;
    string action = 7;
}

message StageTaking {
    double verification = 1;
    double process = 2;
    double all = 3;
}